--- a/songcrud/requirements.txt
+++ b/songcrud/requirements.txt
@@ -2,3 +2,10 @@ asgiref==3.5.2
 Django==4.1.2
 sqlparse==0.4.3
 tzdata==2022.5
+certifi==2022.9.24
+distlib==0.3.6
+filelock==3.8.0
+pipenv==2022.10.12
+platformdirs==2.5.2
+virtualenv==20.16.5
+virtualenv-clone==0.5.7
